--- a/lib/php-bandwidth/CHANGELOG
+++ b/lib/php-bandwidth/CHANGELOG
@@ -98,3 +98,54 @@ Continuing from 0.5.0
   please call (statically):
   Catapult\Credentials::setPath("./some_external_path/");
   When not using this credentials.json will default to the source directory
+
+
+0.7.1
+---------------------------------------------------------
+
+- Media object needed urgent patch.
+  previously media objects preserved headers,
+  this has been deprecated and media objects will
+  only keep Catapult Media Info and content.
+  Please update
+
+
+0.7.2
+
+   Event format:
+
+   answerCallEvent = new AnswerCallEvent; 
+   incomingCallEvent = new IncomingCallEvent;
+
+  Catapult will now look at these two objects and provide data
+  to the activated one. So you can use: isActive/0 to acheive this. 
+  answerCallEvent->isActive() will be switch on when eventType is "answer"
+
+  * Adds domains & endpoints 
+   
+  * New Models:
+    Domains: Support for Catapult domains
+    Endpoints: Support for Catapult endpoints
+    EndpointsMulti: a class to make endpoints in batch for one domain
+
+  * New Types:
+    SIP: SIP address validation (RFC3261)
+    SIPRealm: four dot validation of a SIP realm,
+    EndpointsCredentials: An endpoints credentials object
+     * needs: 
+       username, password and realm
+     * returns a serializable object for Endpoints
+
+  * Event: 
+    HangupCallEvent is now supported. Previously only available with eventType
+
+  * Tests:
+    Domains 
+    Endpoints
+    expand on Transcription tests
+
+  * Minor bug fixes / additions:
+  * adds toArray/1 which works on CollectionObject and GenericResources
+    will provide an array version of object
+  * Collections objects will now return list on listAll/1 
+  * Public TODO list of internal things that can be updated,
