changes to app 009

--- a/TODO
+++ b/TODO
@@ -99,6 +99,9 @@ App 009
 - move creation interface to
 another page, add link to main page, "Create Domains & Endpoints"
 
++ SIP Call creation needs to
+be tested and 
+
 Tests
 --------------------------------------------------
 
