minor updates more doc on sleep/0 usage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,6 +18,15 @@ steps.
 
 03/15/2015:
 BaML transfer example added
+03/15/2015:
+SIP Domains example added -
+
+0.2.1
+04/08/2015:
+- Add sleep timeouts to application.json
+each should be commented and describe how it effects the next step, things
+to consider
+- add home link
 
 
 App 001 
