--- a/CHANGELOG
+++ b/CHANGELOG
@@ -100,3 +100,11 @@ App 009
 0.1.0
 SIP Calls
 - same support as App 001 
+0.1.3
+Update for toArray/0
+needs php-bandwidth v0.7.3
+
+
+-- other
+
+view transaction history with the transactions application
